[package]
name = "buttons"
version = "0.1.0"
readme = "README.md"
homepage = "https://github.com/Soft/buttons"
repository = "https://github.com/Soft/buttons"
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
edition = "2018"
license = "MIT"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
warp = "0.2.5"
toml = "0.5.6"
anyhow = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.22", features = ["rt-threaded", "process"] }
structopt = "0.3.17"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
lazy_static = "1.4.0"
tera = {version = "1", default-features = false }
